Bug 374541 - Krunner segfaulting after selecting result + pressing Enter
Summary: Krunner segfaulting after selecting result + pressing Enter
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.8.5
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-01-04 14:32 UTC by Peter Kreussel
Modified: 2017-01-05 13:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Kreussel 2017-01-04 14:32:24 UTC
Application: krunner (5.8.5)

Qt Version: 5.7.1
Frameworks Version: 5.29.0
Operating System: Linux 4.8.13-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
--opening Krunner with Alt+Space
--typing "kwr"
--selecting result "KWrite", pressing Enter

I am using Nvidia 375.26. 
This has been happening for quite a while (= different versions of plasma-framwork on Arch Linux). Not very often, but Krunner does not restart, which makes this a bit of a bother.

-- Backtrace:
Application: krunner (krunner), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f32fa4427c0 (LWP 22922))]

Thread 21 (Thread 0x7f328d7fa700 (LWP 20189)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 20 (Thread 0x7f328dffb700 (LWP 20188)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 19 (Thread 0x7f328e7fc700 (LWP 20187)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 18 (Thread 0x7f328effd700 (LWP 20186)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 17 (Thread 0x7f328f7fe700 (LWP 20185)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 16 (Thread 0x7f3287fff700 (LWP 20184)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 15 (Thread 0x7f328ffff700 (LWP 20183)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#9  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#10 0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#11 0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#12 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 14 (Thread 0x7f32acff9700 (LWP 20182)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 13 (Thread 0x7f32ad7fa700 (LWP 20181)):
[KCrash Handler]
#6  0x00007f32f65a2173 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f65a4f63 in QJsonObject::value(QString const&) const () at /usr/lib/libQt5Core.so.5
#8  0x00007f32f65a506d in QJsonObject::operator[](QString const&) const () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f719af79 in KPluginMetaData::rootObject() const () at /usr/lib/libKF5CoreAddons.so.5
#10 0x00007f32f719bd06 in KPluginMetaData::pluginId() const () at /usr/lib/libKF5CoreAddons.so.5
#11 0x00007f32f8a2a673 in KPackage::PackageLoader::loadPackageStructure(QString const&) () at /usr/lib/libKF5Package.so.5
#12 0x00007f32f8a2cc1b in KPackage::PackageLoader::listPackages(QString const&, QString const&) () at /usr/lib/libKF5Package.so.5
#13 0x00007f32f8a2d186 in KPackage::PackageLoader::findPackages(QString const&, QString const&, std::function<bool (KPluginMetaData const&)>) () at /usr/lib/libKF5Package.so.5
#14 0x00007f32f597b1c1 in Plasma::PluginLoader::listAppletMetaData(QString const&, QString const&) () at /usr/lib/libKF5Plasma.so.5
#15 0x00007f32f597b4b0 in Plasma::PluginLoader::listAppletInfo(QString const&, QString const&) () at /usr/lib/libKF5Plasma.so.5
#16 0x00007f32c0582308 in  () at /usr/lib/qt/plugins/krunner_windowedwidgets.so
#17 0x00007f32d465de48 in Plasma::AbstractRunner::performMatch(Plasma::RunnerContext&) () at /usr/lib/libKF5Runner.so.5
#18 0x00007f32d443bb88 in ThreadWeaver::Executor::run(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /usr/lib/libKF5ThreadWeaver.so.5
#19 0x00007f32d443aa9a in ThreadWeaver::Job::execute(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /usr/lib/libKF5ThreadWeaver.so.5
#20 0x00007f32d443a140 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#21 0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#22 0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#23 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 12 (Thread 0x7f32adffb700 (LWP 20180)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 11 (Thread 0x7f32ae7fc700 (LWP 20179)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 10 (Thread 0x7f32aeffd700 (LWP 20178)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 9 (Thread 0x7f32af7fe700 (LWP 20177)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7f32affff700 (LWP 20176)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7f32b4c9a700 (LWP 20175)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7f32b549b700 (LWP 20174)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32d44381c0 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f32d443c988 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f32d443c9e2 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f32d4437263 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f32d443a1f9 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7f32c96ee700 (LWP 20172)):
#0  0x00007f32f38a510f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f32f63edbab in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f32f93aa555 in  () at /usr/lib/libQt5Quick.so.5
#3  0x00007f32f93aae4a in  () at /usr/lib/libQt5Quick.so.5
#4  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7f32d72f5700 (LWP 23006)):
#0  0x00007f32f19f0dd4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f32f19aad60 in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#2  0x00007f32f19ab6ab in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f32f19ab89c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f32f661c2db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f32f65c5d3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f32f63e8063 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f8f0be75 in  () at /usr/lib/libQt5Qml.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f32def03700 (LWP 22982)):
#0  0x00007f32f19f0dd4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f32f19aac7c in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#2  0x00007f32f19ab6ab in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f32f19ab89c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f32f661c2db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f32f65c5d3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f32f63e8063 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f32f7eacde5 in  () at /usr/lib/libQt5DBus.so.5
#8  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f32e5293700 (LWP 22931)):
#0  0x00007f32f5cf948d in poll () at /usr/lib/libc.so.6
#1  0x00007f32f53f08e0 in  () at /usr/lib/libxcb.so.1
#2  0x00007f32f53f2679 in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f32e7603789 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f32f63eccf8 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f32f389f454 in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f32f5d027df in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f32fa4427c0 (LWP 22922)):
#0  0x00007f32f5cf948d in poll () at /usr/lib/libc.so.6
#1  0x00007f32f19ab786 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f32f19ab89c in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f32f661c2db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f32f65c5d3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f32f65ce23c in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#6  0x0000000000406b20 in  ()
#7  0x00007f32f5c3a291 in __libc_start_main () at /usr/lib/libc.so.6
#8  0x0000000000406baa in _start ()

Reported using DrKonqi
Comment 1 Kai Uwe Broulik 2017-01-05 13:24:07 UTC
Git commit 8391e022e0f0b7e471f65563152913ecec68f0f1 by Kai Uwe Broulik.
Committed on 05/01/2017 at 13:23.
Pushed by broulik into branch 'master'.

[PackageLoader] Don't access invalid KPluginMetadata

Differential Revision: https://phabricator.kde.org/D3958

M  +2    -2    src/kpackage/packageloader.cpp

https://commits.kde.org/kpackage/8391e022e0f0b7e471f65563152913ecec68f0f1