[PackageLoader] Don't access invalid KPluginMetadata

BUG: 374541

Differential Revision: https://phabricator.kde.org/D3958