src/kpackage/packageloader.cpp
@@ -331,7 +331,7 @@ KPackage::PackageStructure *PackageLoader::loadPackageStructure(const QString &p
                 const QJsonObject &obj = QJsonValue(*iter).toObject();
                 const QString &candidate = obj.value(QStringLiteral("FileName")).toString();
                 const KPluginMetaData m(obj, candidate);
-                if (m.pluginId() == packageFormat) {
+                if (m.isValid() && m.pluginId() == packageFormat) {
                     pluginFileName = candidate;
                     break;
                 }
@@ -341,7 +341,7 @@ KPackage::PackageStructure *PackageLoader::loadPackageStructure(const QString &p
             QVectorIterator<KPluginMetaData> iter(plugins);
             while (iter.hasNext()) {
                 auto md = iter.next();
-                if (md.pluginId() == packageFormat) {
+                if (md.isValid() && md.pluginId() == packageFormat) {
                     pluginFileName = md.fileName();
                     break;
                 }
